# LenixieMonitor

./: CMakeLists.txt  ClockWidget.cpp  ClockWidget.h  DeviceCommand.h  DeviceLogger.cpp  DeviceLogger.h  DeviceReport.h  DndWidget.cpp  DndWidget.h  LogWidget.cpp  LogWidget.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  NetworkWidget.cpp  NetworkWidget.h  NtpWidget.cpp  NtpWidget.h  StatusPanel.cpp  StatusPanel.h  UsbDevice.cpp  UsbDevice.h  UsbWatcher.cpp  UsbWatcher.h  main.cpp
NetworkWidget/: ConnectDialog.cpp  ConnectDialog.h  NetworkWidget.cpp  NetworkWidget.h
UsbDevice/: CMakeLists.txt  DataPacket.cpp  DataPacket.h  UsbDevice.cpp  UsbDevice.h  UsbWatcher.cpp  UsbWatcher.h
